external-crates/move/crates/move-compiler/tests/move_check/parser/return_in_binop.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04003]: built-in operation not supported
  ┌─ tests/move_check/parser/return_in_binop.move:3:9
  │
3 │         return >> 0;
  │         ^^^^^^
  │         │
  │         Invalid argument to '>>'
  │         Found: '_'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04003]: built-in operation not supported
  ┌─ tests/move_check/parser/return_in_binop.move:4:9
  │
4 │         return << 0;
  │         ^^^^^^
  │         │
  │         Invalid argument to '<<'
  │         Found: '_'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'
