external-crates/move/crates/move-compiler/tests/move_check/parser/return_in_binop.move
module 0x42::M {
    fun t() {
        return >> 0;
        return << 0;
        return || false;
        return && false;
        return + 0u64;
        return - 0u64;
        return % 0u64;
        return / 1u64;
        return < 0u64;
        return > 0u64;
        return <= 0u64;
        return == 0u64;
        return >= 0u64;
        return != 0u64;
        return | 0u64;
        return ^ 0u64;
    }
}
